fix(ui): pre block causes overflow in stock pane

--- a/cotoami_desktop/ui/assets/css/app/_pins.scss
+++ b/cotoami_desktop/ui/assets/css/app/_pins.scss
@@ -142,6 +142,7 @@ section.pins {
 
       div.content {
         flex: 1;
+        min-width: 0; // let this item shrink below the content size
       }
 
       div.itos {
